# local-lua-cli

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile.cli  Dockerfile.server  Modelfile  README.md  benchmark.py  docker-compose.yml  project_context_sergey.md  pyproject.toml
localscript/: _model_generated.py  agent.py  config.py  context.py  difficulty.py  docs.py  llm.py  main.py  memory.py  prompt.txt  server.py  tools.py  tui.py  ui.py
localscript/data/: lua_docs.json
models/: Modelfile
tests/: test_scenarios.py
